force-app/main/objects/Course_Booking__c.object
<CustomObject>
    <description>Public and Incompany course bookings to replace Big Sky Courses &amp; Bookings module</description>
    <fields>
        <fullName>Assessments__c</fullName>
        <label>Assessments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AutomationBypassDateTime__c</fullName>
        <label>AutomationBypassDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N20000001PpD0EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Either Course Booking and it&apos;s billing Contact are not from the same Billing Account And Billing Contact is Inactive.</errorMessage>
            <filterItems>
                <field>$Source.Billing_Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Bookings (Billing Contact)</relationshipLabel>
        <relationshipName>R00N20000001PpD1EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booker_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booker Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N20000000pQbmEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <description>Status of the booking</description>
        <label>Booking Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provisional</fullName>
                    <default>true</default>
                    <label>Provisional</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Waiting to be marked</fullName>
                </value>
                <value>
                    <fullName>Marked – Pass</fullName>
                </value>
                <value>
                    <fullName>Marked – not complete</fullName>
                </value>
                <value>
                    <fullName>Ready to be confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled - to be rebooked</fullName>
                </value>
                <value>
                    <fullName>Cancelled - to be credited</fullName>
                </value>
                <value>
                    <fullName>Cancelled - chargeable</fullName>
                </value>
                <value>
                    <fullName>Training not complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Course Bookings</relationshipLabel>
        <relationshipName>Course_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Refund_Type__c</fullName>
        <label>Cancellation Refund Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_Sent__c</fullName>
        <label>Certificate Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_from_button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed from button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Qualtrics and is being used in Outbound message.</description>
        <label>Completion Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course Booking Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Notes__c</fullName>
        <label>Contact Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Course_Booking_BU__c</fullName>
        <description>Business Unit from the course on the course booking</description>
        <label>Course Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Booking_Transferred_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Booking Transferred From</label>
        <referenceTo>Course_Booking__c</referenceTo>
        <relationshipLabel>Course Bookings</relationshipLabel>
        <relationshipName>Course_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Booking_Transferred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Booking Transferred To</label>
        <referenceTo>Course_Booking__c</referenceTo>
        <relationshipLabel>Course Bookings (Course Booking Transferred To)</relationshipLabel>
        <relationshipName>Course_Bookings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Category__c</fullName>
        <description>Created for Qualtrics and is being used in Outbound message.</description>
        <formula>TEXT(Course_Number__r.Course_Category__c)</formula>
        <label>Course Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Country__c</fullName>
        <description>Created for Qualtrics and is being used in Outbound message.</description>
        <formula>TEXT(Course_Number__r.Course_BU__c)</formula>
        <label>Course Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <description>From the course record</description>
        <label>Course Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Director__c</fullName>
        <description>Created for Qualtrics and is being used in Outbound message.</description>
        <formula>Course_Number__r.Course_Director__r.Contact_Full_Name__c</formula>
        <label>Course Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_End_Date__c</fullName>
        <label>Course End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>Course Name from Course Object</description>
        <label>Course Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Number_Text__c</fullName>
        <description>Created for Qualtrics and is being used in Outbound message.</description>
        <formula>Course_Number__r.Name</formula>
        <label>Course Number Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Number__c</fullName>
        <label>Course Number</label>
        <referenceTo>Courses__c</referenceTo>
        <relationshipLabel>Course Bookings</relationshipLabel>
        <relationshipName>Course_Booking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Course_Price_Discount__c</fullName>
        <description>Discount on the base course price, changed to 5 digits - JM 12/3/10.</description>
        <inlineHelpText>Please enter as a total amount, not a % value</inlineHelpText>
        <label>Course Discount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Price__c</fullName>
        <description>Course price with no discount and no extras</description>
        <inlineHelpText>Prices are now fixed in Sun based on agreed price.</inlineHelpText>
        <label>Public Course Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Start_Date__c</fullName>
        <label>Course Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <description>Course Type from Course object</description>
        <label>Course Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Venue__c</fullName>
        <label>Course Venue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Date__c</fullName>
        <label>Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Notes__c</fullName>
        <label>Credit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Reason__c</fullName>
        <label>Credit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S04 - Client Order Error</fullName>
                </value>
                <value>
                    <fullName>S05 - SOE Operator Error</fullName>
                </value>
                <value>
                    <fullName>S07 - Client Cancelled Training</fullName>
                </value>
                <value>
                    <fullName>S08 - SHL Cancelled Course</fullName>
                </value>
                <value>
                    <fullName>S09 - Goodwill Gesture</fullName>
                </value>
                <value>
                    <fullName>S11 - System Error</fullName>
                </value>
                <value>
                    <fullName>S12 - Requestor Error</fullName>
                </value>
                <value>
                    <fullName>S14 - Training Operator Error</fullName>
                </value>
                <value>
                    <fullName>S13 - Client Support Operator Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to be credited</fullName>
                </value>
                <value>
                    <fullName>Queried</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Completed via order</fullName>
                </value>
                <value>
                    <fullName>Ready for OAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Text_Description__c</fullName>
        <label>Credit Text Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cross_Border_BU__c</fullName>
        <label>Cross Border BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abu Dhabi - AD1</fullName>
                </value>
                <value>
                    <fullName>Australia - AU1</fullName>
                </value>
                <value>
                    <fullName>Belgium SPS - BE5</fullName>
                </value>
                <value>
                    <fullName>Canada - CA1</fullName>
                </value>
                <value>
                    <fullName>China - CN1</fullName>
                </value>
                <value>
                    <fullName>Denmark - DK1</fullName>
                </value>
                <value>
                    <fullName>EU Region - E50</fullName>
                </value>
                <value>
                    <fullName>Finland - FI1</fullName>
                </value>
                <value>
                    <fullName>France - FR1</fullName>
                </value>
                <value>
                    <fullName>France SPS - FR5</fullName>
                </value>
                <value>
                    <fullName>Germany SPS - DE5</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - HK1</fullName>
                </value>
                <value>
                    <fullName>India - IN1</fullName>
                </value>
                <value>
                    <fullName>Italy - IT1</fullName>
                </value>
                <value>
                    <fullName>Middle East - ME1</fullName>
                </value>
                <value>
                    <fullName>Netherlands SPS - NL5</fullName>
                </value>
                <value>
                    <fullName>New Zealand - NZ1</fullName>
                </value>
                <value>
                    <fullName>Norway - NO1</fullName>
                </value>
                <value>
                    <fullName>Philippines - PH1</fullName>
                </value>
                <value>
                    <fullName>Poland - PL1</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia - SA5</fullName>
                </value>
                <value>
                    <fullName>SHL Previsor - P10</fullName>
                </value>
                <value>
                    <fullName>Singapore - SG1</fullName>
                </value>
                <value>
                    <fullName>South Africa - ZA1</fullName>
                </value>
                <value>
                    <fullName>Spain - ES1</fullName>
                </value>
                <value>
                    <fullName>Sweden - SE1</fullName>
                </value>
                <value>
                    <fullName>Switzerland - CH1</fullName>
                </value>
                <value>
                    <fullName>UK - UK1</fullName>
                </value>
                <value>
                    <fullName>US - US5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_Border_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cross Border Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_to_Invoice__c</fullName>
        <label>Currency to Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>KWD</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>OMR</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>PKR</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>SAR</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
                <value>
                    <fullName>TRY</fullName>
                </value>
                <value>
                    <fullName>TWD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Order_Ref__c</fullName>
        <label>Customer Order Ref</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_No__c</fullName>
        <formula>Billing_Account__r.Account_Number__c</formula>
        <label>D-No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Number1__c</fullName>
        <formula>Delegate_Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Number__c</fullName>
        <label>D Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Booking_Made__c</fullName>
        <label>Date Booking Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled__c</fullName>
        <description>Date booking cancelled</description>
        <label>Date Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Credit_Raised__c</fullName>
        <inlineHelpText>Date the actual credit note raised in Sun</inlineHelpText>
        <label>Date Credit Raised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Invoiced__c</fullName>
        <label>Date Invoiced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_JI_Sent__c</fullName>
        <label>Date JI Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Survey_Sent__c</fullName>
        <label>Completion Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deferral_Month__c</fullName>
        <label>Deferral Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delegate_Account_Id__c</fullName>
        <description>Pulling Delegate Contact&apos;s Account Owner Id</description>
        <formula>Delegate_Contact__r.AccountId</formula>
        <label>Delegate Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_Account_Old__c</fullName>
        <formula>Delegate_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegate Account Old</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Delegate_Account_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegate_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Course Bookings (Delegate Account)</relationshipLabel>
        <relationshipName>Course_Bookings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegate_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N20000000pPXoEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Mode__c</fullName>
        <description>Created for Qualtrics and is being used in Outbound message.</description>
        <formula>TEXT(Course_Number__r.Delivery_Mode__c)</formula>
        <label>Delivery Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <label>Department Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COOGCSC</fullName>
                    <default>true</default>
                    <label>COOGCSC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscountApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Discount approvers: 
C Malliaros 
H Deavin 
H Korduner 
J Rautiainen 
K Coppe 
K McLoughlin 
K-A Steffensen 
M Whelan 
N Shaw 
O Chinotti 
R Herbert 
R Hezemans 
S Raymond</inlineHelpText>
        <label>Discount Approved By</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Approve_CB_Discounts__c</field>
                <operation>equals</operation>
                <value>true</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Course_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_not_Contact_Delegates__c</fullName>
        <description>Created for Qualtrics and is being used in Outbound message.</description>
        <formula>Delegate_Contact__r.Do_Not_Contact__c</formula>
        <label>Do not Contact Delegates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elearning__c</fullName>
        <label>Elearning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extra_Night__c</fullName>
        <label>Extra Night</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extra_night_price__c</fullName>
        <label>Extra Night Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Follow_up_Survey_Send_Date__c</fullName>
        <description>Created for Qualtrics and is being used in Outbound message.</description>
        <label>Follow-up Survey Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_up_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Qualtrics and is being used in Outbound message.</description>
        <label>Follow-up Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formatted_Defferal_Month__c</fullName>
        <formula>CASE(  MONTH(Deferral_Month__c) , 1,&quot;Jan-09&quot;, 2,&quot; Feb-09&quot;,3,&quot;Mar-09&quot;,4,&quot;Apr-09&quot;,5,&quot;May-09&quot;,6,&quot;Jun-09&quot;,7,&quot;Jul-09&quot;,8,&quot;Aug-09&quot;,9,&quot;Sep-09&quot;,10,&quot;Oct-09&quot;,11,&quot;Nov-09&quot;,12,&quot;Dec-09&quot;,&quot;&quot;)</formula>
        <label>Formatted Defferal Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Language__c</fullName>
        <label>Invoice Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Swiss</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Notes__c</fullName>
        <label>Invoice Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to be invoiced</fullName>
                </value>
                <value>
                    <fullName>Queried</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Unit Transfer</fullName>
                </value>
                <value>
                    <fullName>Completed via order</fullName>
                </value>
                <value>
                    <fullName>Ready for OAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Text_Description__c</fullName>
        <label>Invoice Text Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsAutomationBypassed__c</fullName>
        <formula>AutomationBypassDateTime__c &gt; (NOW() - 0.00005787037)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAutomationBypassed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Master_Lookup__c</fullName>
        <label>Item Master Lookup</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Profit_Centre__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AccommNightBefore</fullName>
                </value>
                <value>
                    <fullName>CancelCharge</fullName>
                </value>
                <value>
                    <fullName>Cancellation Fee</fullName>
                </value>
                <value>
                    <fullName>Cert_Request</fullName>
                </value>
                <value>
                    <fullName>MySHL_12</fullName>
                </value>
                <value>
                    <fullName>PUB360TRN</fullName>
                </value>
                <value>
                    <fullName>PUBASSTTRN</fullName>
                </value>
                <value>
                    <fullName>PubCBITRN</fullName>
                </value>
                <value>
                    <fullName>PUBCOACH</fullName>
                </value>
                <value>
                    <fullName>PubELCombo</fullName>
                </value>
                <value>
                    <fullName>PubELOPQC</fullName>
                </value>
                <value>
                    <fullName>PUBEMPMOT</fullName>
                </value>
                <value>
                    <fullName>PubEXLEAD</fullName>
                </value>
                <value>
                    <fullName>PubHAU-POT</fullName>
                </value>
                <value>
                    <fullName>PubHPTeam</fullName>
                </value>
                <value>
                    <fullName>PubHRPio</fullName>
                </value>
                <value>
                    <fullName>PubIndIDP</fullName>
                </value>
                <value>
                    <fullName>PubIntTec</fullName>
                </value>
                <value>
                    <fullName>PubLEADTRN</fullName>
                </value>
                <value>
                    <fullName>PubNRes360</fullName>
                </value>
                <value>
                    <fullName>PUBNRES360F</fullName>
                </value>
                <value>
                    <fullName>PubNResACDC</fullName>
                </value>
                <value>
                    <fullName>PubNResAss</fullName>
                </value>
                <value>
                    <fullName>PubNResBCOMBO</fullName>
                </value>
                <value>
                    <fullName>PubNResBOPQ</fullName>
                </value>
                <value>
                    <fullName>PubNResBOT</fullName>
                </value>
                <value>
                    <fullName>PubNResBP</fullName>
                </value>
                <value>
                    <fullName>PubNResCBI</fullName>
                </value>
                <value>
                    <fullName>PUBNRESCBIA</fullName>
                </value>
                <value>
                    <fullName>PubNResCombo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>For Sun SOE data entry</description>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>L01 - Advertisement</fullName>
                </value>
                <value>
                    <fullName>L02 - News story / article</fullName>
                </value>
                <value>
                    <fullName>L03 - SHL newsletter</fullName>
                </value>
                <value>
                    <fullName>L04 - Promotional campaign email</fullName>
                </value>
                <value>
                    <fullName>L05 - Promotional campaign direct mail</fullName>
                </value>
                <value>
                    <fullName>L06 - Promotional campaign call</fullName>
                </value>
                <value>
                    <fullName>L07 - SHL Sales / Account Manager / Consultant discussion</fullName>
                </value>
                <value>
                    <fullName>L08 - SHL Duty Consultant</fullName>
                </value>
                <value>
                    <fullName>L09 - SHL Partner</fullName>
                </value>
                <value>
                    <fullName>L10 - SHL website promotion</fullName>
                </value>
                <value>
                    <fullName>L11 - Other (non-SHL) website promotion</fullName>
                </value>
                <value>
                    <fullName>L12 - Reputation / referral</fullName>
                </value>
                <value>
                    <fullName>L13 - Conference / seminar attendance</fullName>
                </value>
                <value>
                    <fullName>L14 - SHL training course attendance</fullName>
                </value>
                <value>
                    <fullName>L15 - Exhibition / trade show attendance</fullName>
                </value>
                <value>
                    <fullName>LZZ - No specified source (eg. simple repeat order)</fullName>
                </value>
                <value>
                    <fullName>L16 Customer Experience</fullName>
                </value>
                <value>
                    <fullName>L17 System Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Units_Transferred__c</fullName>
        <description>Specify number of units transferred</description>
        <label>No. of Units Transferred</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OAT_Email__c</fullName>
        <label>OAT Email</label>
        <type>Email</type>
    </fields>
</CustomObject>